--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a6e1f4">  <td>20/05/11 23:48:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC034_OrderAsGuest.AddProdToCart()[pri:1, instance:com.training.sanity.tests.RTTC034_OrderAsGuest@3532ec19]">AddProdToCart</td> 
+<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC036_ReturnProduct.LoginTest()[pri:0, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">LoginTest</td> 
   <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/11 23:49:11</td>   <td>26177</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC034_OrderAsGuest.CheckOut()[pri:2, instance:com.training.sanity.tests.RTTC034_OrderAsGuest@3532ec19]">CheckOut</td> 
+<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:33</td>   <td>17479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC036_ReturnProduct.OpenOrderDetails()[pri:1, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">OpenOrderDetails</td> 
   <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/11 23:48:28</td>   <td>-17264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC034_OrderAsGuest.OrderAsGuest()[pri:0, instance:com.training.sanity.tests.RTTC034_OrderAsGuest@3532ec19]">OrderAsGuest</td> 
+<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:44</td>   <td>28729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC036_ReturnProduct.ReturnOrder()[pri:2, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">ReturnOrder</td> 
   <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/11 23:48:03</td>   <td>-41676</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC034_OrderAsGuest.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC034_OrderAsGuest@3532ec19]">&gt;&gt;setUpBeforeClass</td> 
+<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:01</td>   <td>-14752</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC036_ReturnProduct.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">&gt;&gt;setUpBeforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/11 23:49:58</td>   <td>72942</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC034_OrderAsGuest.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC034_OrderAsGuest@3532ec19]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:59</td>   <td>43360</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC036_ReturnProduct.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
 </table>
