--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\SanthoshKumarBoggara\AppData\Local\Temp\testng-eclipse-441969984\testng-customsuite.xml</span>
+                    <span>C:\Users\SanthoshKumarBoggara\AppData\Local\Temp\testng-eclipse--1210418226\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC036_ReturnProduct" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts" hash-for-method="CreateNewProduct(Samsung_Santhosh, Samsung_Santhosh, SKU-003, 20000, 100, TV, Valid)">CreateNewProduct(Samsung_Santhosh, Samsung_Santhosh, SKU-003, 20000, 100, TV, Valid)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC036_ReturnProduct" hash-for-method="OpenOrderDetails">OpenOrderDetails</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts" hash-for-method="CreateNewProduct(Onida_Santhosh, Onida_Santhosh, SKU-003, 18000, 100, TV, Valid)">CreateNewProduct(Onida_Santhosh, Onida_Santhosh, SKU-003, 18000, 100, TV, Valid)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC036_ReturnProduct" hash-for-method="ReturnOrder">ReturnOrder</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts" hash-for-method="CreateNewProduct(Bat_Santhosh, Cricket Bat_Santhosh, SKU-003, 12000, 100, Sports, Valid)">CreateNewProduct(Bat_Santhosh, Cricket Bat_Santhosh, SKU-003, 12000, 100, Sports, Valid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts" hash-for-method="CreateNewProduct(Asus_Santhosh, Asus Zenfone_Santhosh, SKU-003, 7000, 100, Electronic, Valid)">CreateNewProduct(Asus_Santhosh, Asus Zenfone_Santhosh, SKU-003, 7000, 100, Electronic, Valid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts" hash-for-method="Login(admin, admin@123)">Login(admin, admin@123)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts" hash-for-method="OpenCatalogProducts">OpenCatalogProducts</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +145,54 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.RTTC036_ReturnProduct</span>
+              <span class="class-name">com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginTest">
-                  </a> <!-- LoginTest -->
-                  <span class="method-name">LoginTest</span>
+                  <a name="CreateNewProduct(Samsung_Santhosh, Samsung_Santhosh, SKU-003, 20000, 100, TV, Valid)">
+                  </a> <!-- CreateNewProduct(Samsung_Santhosh, Samsung_Santhosh, SKU-003, 20000, 100, TV, Valid) -->
+                  <span class="method-name">CreateNewProduct</span>
+                  <span class="parameters">(Samsung_Santhosh, Samsung_Santhosh, SKU-003, 20000, 100, TV, Valid)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="OpenOrderDetails">
-                  </a> <!-- OpenOrderDetails -->
-                  <span class="method-name">OpenOrderDetails</span>
+                  <a name="CreateNewProduct(Onida_Santhosh, Onida_Santhosh, SKU-003, 18000, 100, TV, Valid)">
+                  </a> <!-- CreateNewProduct(Onida_Santhosh, Onida_Santhosh, SKU-003, 18000, 100, TV, Valid) -->
+                  <span class="method-name">CreateNewProduct</span>
+                  <span class="parameters">(Onida_Santhosh, Onida_Santhosh, SKU-003, 18000, 100, TV, Valid)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ReturnOrder">
-                  </a> <!-- ReturnOrder -->
-                  <span class="method-name">ReturnOrder</span>
+                  <a name="CreateNewProduct(Bat_Santhosh, Cricket Bat_Santhosh, SKU-003, 12000, 100, Sports, Valid)">
+                  </a> <!-- CreateNewProduct(Bat_Santhosh, Cricket Bat_Santhosh, SKU-003, 12000, 100, Sports, Valid) -->
+                  <span class="method-name">CreateNewProduct</span>
+                  <span class="parameters">(Bat_Santhosh, Cricket Bat_Santhosh, SKU-003, 12000, 100, Sports, Valid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="CreateNewProduct(Asus_Santhosh, Asus Zenfone_Santhosh, SKU-003, 7000, 100, Electronic, Valid)">
+                  </a> <!-- CreateNewProduct(Asus_Santhosh, Asus Zenfone_Santhosh, SKU-003, 7000, 100, Electronic, Valid) -->
+                  <span class="method-name">CreateNewProduct</span>
+                  <span class="parameters">(Asus_Santhosh, Asus Zenfone_Santhosh, SKU-003, 7000, 100, Electronic, Valid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Login(admin, admin@123)">
+                  </a> <!-- Login(admin, admin@123) -->
+                  <span class="method-name">Login</span>
+                  <span class="parameters">(admin, admin@123)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="OpenCatalogProducts">
+                  </a> <!-- OpenCatalogProducts -->
+                  <span class="method-name">OpenCatalogProducts</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +200,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SanthoshKumarBoggara\AppData\Local\Temp\testng-eclipse-441969984\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SanthoshKumarBoggara\AppData\Local\Temp\testng-eclipse--1210418226\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +209,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.RTTC036_ReturnProduct&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +249,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginTest')
-data.setCell(0, 2, 'com.training.sanity.tests.RTTC036_ReturnProduct')
-data.setCell(0, 3, 17467);
+data.setCell(0, 1, 'CreateNewProduct')
+data.setCell(0, 2, 'com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts')
+data.setCell(0, 3, 16795);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ReturnOrder')
-data.setCell(1, 2, 'com.training.sanity.tests.RTTC036_ReturnProduct')
-data.setCell(1, 3, 14629);
+data.setCell(1, 1, 'CreateNewProduct')
+data.setCell(1, 2, 'com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts')
+data.setCell(1, 3, 15245);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'OpenOrderDetails')
-data.setCell(2, 2, 'com.training.sanity.tests.RTTC036_ReturnProduct')
-data.setCell(2, 3, 11248);
+data.setCell(2, 1, 'CreateNewProduct')
+data.setCell(2, 2, 'com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts')
+data.setCell(2, 3, 15150);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'CreateNewProduct')
+data.setCell(3, 2, 'com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts')
+data.setCell(3, 3, 14704);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'Login')
+data.setCell(4, 2, 'com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts')
+data.setCell(4, 3, 2871);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'OpenCatalogProducts')
+data.setCell(5, 2, 'com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts')
+data.setCell(5, 3, 2536);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 43 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,26 +304,38 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.RTTC036_ReturnProduct</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">LoginTest</span>
-                <span class="method-start">14760 ms</span>
+                <span class="method-name">Login(admin, admin@123)</span>
+                <span class="method-start">12795 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">OpenOrderDetails</span>
-                <span class="method-start">32238 ms</span>
+                <span class="method-name">OpenCatalogProducts</span>
+                <span class="method-start">15673 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">ReturnOrder</span>
-                <span class="method-start">43488 ms</span>
+                <span class="method-name">CreateNewProduct(Samsung_Santhosh, Samsung_Santhosh, SKU-003, 20000, 100, TV, Valid)</span>
+                <span class="method-start">18318 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">CreateNewProduct(Onida_Santhosh, Onida_Santhosh, SKU-003, 18000, 100, TV, Valid)</span>
+                <span class="method-start">35115 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">CreateNewProduct(Bat_Santhosh, Cricket Bat_Santhosh, SKU-003, 12000, 100, Sports, Valid)</span>
+                <span class="method-start">49820 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">CreateNewProduct(Asus_Santhosh, Asus Zenfone_Santhosh, SKU-003, 7000, 100, Electronic, Valid)</span>
+                <span class="method-start">65067 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">58119 ms</span>
+                <span class="method-start">80218 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
