--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/classes.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/classes.html
@@ -4,22 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.training.sanity.tests.RTTC036_ReturnProduct</td>
+<td>com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LoginTest</td>
+<td>OpenCatalogProducts</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>OpenOrderDetails</td>
+<td>Login</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ReturnOrder</td>
+<td>CreateNewProduct</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
