--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC036_ReturnProduct.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:16</td>   <td>14752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC036_ReturnProduct.LoginTest()[pri:0, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">LoginTest</td> 
-  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:33</td>   <td>32231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC036_ReturnProduct.OpenOrderDetails()[pri:1, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">OpenOrderDetails</td> 
-  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:44</td>   <td>43481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC036_ReturnProduct.ReturnOrder()[pri:2, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">ReturnOrder</td> 
-  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="a6e1f4">  <td>20/05/14 10:06:59</td>   <td>58112</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC036_ReturnProduct.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC036_ReturnProduct@3532ec19]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/05/20 10:38:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC065_AdminToAddMultipleProducts.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts@68c4039c]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/05/20 10:38:58</td>   <td>12788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC065_AdminToAddMultipleProducts.Login(java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts@68c4039c]">Login</td> 
+  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/05/20 10:39:01</td>   <td>15666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC065_AdminToAddMultipleProducts.OpenCatalogProducts()[pri:1, instance:com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts@68c4039c]">OpenCatalogProducts</td> 
+  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/05/20 10:39:04</td>   <td>18311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC065_AdminToAddMultipleProducts.CreateNewProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts@68c4039c]">CreateNewProduct</td> 
+  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/05/20 10:39:21</td>   <td>35108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC065_AdminToAddMultipleProducts.CreateNewProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts@68c4039c]">CreateNewProduct</td> 
+  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/05/20 10:39:35</td>   <td>49813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC065_AdminToAddMultipleProducts.CreateNewProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts@68c4039c]">CreateNewProduct</td> 
+  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/05/20 10:39:51</td>   <td>65060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC065_AdminToAddMultipleProducts.CreateNewProduct(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts@68c4039c]">CreateNewProduct</td> 
+  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/05/20 10:40:06</td>   <td>80212</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC065_AdminToAddMultipleProducts.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC065_AdminToAddMultipleProducts@68c4039c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1234776885</td>   <td></td> </tr>
 </table>
